# db-operations-utility

./: .gitignore  CI_CD_SETUP.md  Makefile  PROJECT_PLAN.md  README.md  SRS.md  db_config.py  db_example.py  db_operations.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: run_tests.sh
src/db_operations/: __init__.py  config.py  core.py  utils.py
tests/: conftest.py  test_basic.py  test_config.py  test_core.py
